--- a/SignalR.Server.Web/SignalR.Server.Web.csproj
+++ b/SignalR.Server.Web/SignalR.Server.Web.csproj
@@ -104,13 +104,14 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Properties\PublishProfiles\SAMS.pubxml" />
+    <None Include="Properties\PublishProfiles\server.sams.hawkbane.biz.pubxml" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MyHub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="UserExtensions.cs" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
