--- a/SignalR.Server.Web/Web.config
+++ b/SignalR.Server.Web/Web.config
@@ -9,6 +9,9 @@
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
+  <system.webServer>
+    <directoryBrowse enabled="false" />
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
