--- a/SignalR.Server.Web/SignalR.Server.Web.csproj
+++ b/SignalR.Server.Web/SignalR.Server.Web.csproj
@@ -111,7 +111,7 @@
     <Compile Include="MyHub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="UserExtensions.cs" />
+    <Compile Include="Users.cs" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
