Authentication Working Locally

--- a/SignalR.Server.Web/SignalR.Server.Web.csproj
+++ b/SignalR.Server.Web/SignalR.Server.Web.csproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <None Include="Properties\PublishProfiles\Local Server Folder.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -111,6 +112,7 @@
     <Compile Include="MyHub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="UserNameParse.cs" />
     <Compile Include="Users.cs" />
   </ItemGroup>
   <PropertyGroup>
