--- a/SignalR.Server.Web/SignalR.Server.Web.csproj
+++ b/SignalR.Server.Web/SignalR.Server.Web.csproj
@@ -12,8 +12,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SignalRServerWeb</RootNamespace>
-    <AssemblyName>SignalRServerWeb</AssemblyName>
+    <RootNamespace>SignalR.Server.Web</RootNamespace>
+    <AssemblyName>SignalR.Server.Web</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
@@ -109,6 +109,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GenerateUser.cs" />
     <Compile Include="MyHub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
