--- a/SignalR.Client.Web/SignalR.Client.Web.csproj
+++ b/SignalR.Client.Web/SignalR.Client.Web.csproj
@@ -43,6 +43,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="Images\wait.gif" />
     <Content Include="packages.config" />
     <Content Include="Scripts\jquery-3.1.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.1.1.min.map" />
