--- a/SignalR.Popup.Web/SignalR.Popup.Web.csproj
+++ b/SignalR.Popup.Web/SignalR.Popup.Web.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <Content Include="Scripts\dictionary.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.1.1.min.map" />
     <None Include="Web.Debug.config">
@@ -90,14 +91,33 @@
     <Content Include="Scripts\jquery-3.1.1.min.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.min.js" />
+    <Content Include="Scripts\jquery.cookie.js" />
     <Content Include="Scripts\jquery.countdown.js" />
     <Content Include="Scripts\jquery.countdown.min.js" />
     <Content Include="Scripts\jquery.plugin.js" />
     <Content Include="Scripts\jquery.plugin.min.js" />
     <Content Include="Scripts\jquery.signalR-2.2.2.js" />
     <Content Include="Scripts\jquery.signalR-2.2.2.min.js" />
+    <Content Include="Scripts\jquery.treeview.js" />
+    <Content Include="StyleSheets\Images\ajax-loader.gif" />
+    <Content Include="StyleSheets\Images\file.gif" />
+    <Content Include="StyleSheets\Images\folder-closed.gif" />
+    <Content Include="StyleSheets\Images\folder.gif" />
+    <Content Include="StyleSheets\Images\minus.gif" />
+    <Content Include="StyleSheets\Images\plus.gif" />
+    <Content Include="StyleSheets\Images\treeview-black-line.gif" />
+    <Content Include="StyleSheets\Images\treeview-black.gif" />
+    <Content Include="StyleSheets\Images\treeview-default-line.gif" />
+    <Content Include="StyleSheets\Images\treeview-default.gif" />
+    <Content Include="StyleSheets\Images\treeview-famfamfam-line.gif" />
+    <Content Include="StyleSheets\Images\treeview-famfamfam.gif" />
+    <Content Include="StyleSheets\Images\treeview-gray-line.gif" />
+    <Content Include="StyleSheets\Images\treeview-gray.gif" />
+    <Content Include="StyleSheets\Images\treeview-red-line.gif" />
+    <Content Include="StyleSheets\Images\treeview-red.gif" />
     <Content Include="StyleSheets\jquery.countdown.css" />
     <Content Include="StyleSheets\StyleSheet.css" />
+    <Content Include="StyleSheets\treeview.css" />
     <Content Include="Web.config" />
     <Content Include="Scripts\jquery.countdown.min.map" />
     <Content Include="Scripts\jquery.plugin.min.map" />
