--- a/SignalR.Client.Web/SignalR.Client.Web.csproj
+++ b/SignalR.Client.Web/SignalR.Client.Web.csproj
@@ -43,7 +43,31 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="Popup\index.html" />
     <Content Include="packages.config" />
+    <Content Include="Popup\Scripts\dictionary.js" />
+    <Content Include="Popup\Scripts\JavaScript.js" />
+    <Content Include="Popup\Scripts\jquery.cookie.js" />
+    <Content Include="Popup\Scripts\jquery.layout.js" />
+    <Content Include="Popup\Scripts\jquery.treeview.js" />
+    <Content Include="Popup\Stylesheets\Images\ajax-loader.gif" />
+    <Content Include="Popup\Stylesheets\Images\file.gif" />
+    <Content Include="Popup\Stylesheets\Images\folder-closed.gif" />
+    <Content Include="Popup\Stylesheets\Images\folder.gif" />
+    <Content Include="Popup\Stylesheets\Images\minus.gif" />
+    <Content Include="Popup\Stylesheets\Images\plus.gif" />
+    <Content Include="Popup\Stylesheets\Images\treeview-black-line.gif" />
+    <Content Include="Popup\Stylesheets\Images\treeview-black.gif" />
+    <Content Include="Popup\Stylesheets\Images\treeview-default-line.gif" />
+    <Content Include="Popup\Stylesheets\Images\treeview-default.gif" />
+    <Content Include="Popup\Stylesheets\Images\treeview-famfamfam-line.gif" />
+    <Content Include="Popup\Stylesheets\Images\treeview-famfamfam.gif" />
+    <Content Include="Popup\Stylesheets\Images\treeview-gray-line.gif" />
+    <Content Include="Popup\Stylesheets\Images\treeview-gray.gif" />
+    <Content Include="Popup\Stylesheets\Images\treeview-red-line.gif" />
+    <Content Include="Popup\Stylesheets\Images\treeview-red.gif" />
+    <Content Include="Popup\Stylesheets\StyleSheet.css" />
+    <Content Include="Popup\Stylesheets\treeview.css" />
     <Content Include="Scripts\jquery-3.1.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.1.1.min.map" />
     <None Include="Properties\PublishProfiles\Local Client Folder.pubxml" />
@@ -85,6 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Images\" />
+    <Folder Include="Popup\Images\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
