--- a/SignalR.Server.Console/packages.config
+++ b/SignalR.Server.Console/packages.config
@@ -1,13 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="jQuery" version="3.1.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.2" targetFramework="net452" />
-  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.2" targetFramework="net452" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.5" targetFramework="net452" />
-  <package id="Microsoft.Net.Compilers" version="2.2.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.AspNet.SignalR.SelfHost" version="2.2.2" targetFramework="net452" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Cors" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Diagnostics" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Hosting" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.SelfHost" version="3.1.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
 </packages>
