Added Popup Window Styling.     Corrected reopening an already open detail window to first close then reopen since .focus didn't work to switch tabs  Added loading gifs in detail window

--- a/SignalR.Client.Web/SignalR.Client.Web.csproj
+++ b/SignalR.Client.Web/SignalR.Client.Web.csproj
@@ -43,6 +43,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="Popup\Stylesheets\Images\loading.gif" />
     <Content Include="Popup\index.html" />
     <Content Include="packages.config" />
     <Content Include="Popup\Scripts\dictionary.js" />
